cloud-infra-macros/tests/fails/bucket_name_uppercase_letters.rs
use cloud_infra_macros::bucket_name;

fn example() {
    let bucket = bucket_name!("Uppercased");
}

fn main() {}